Update portfolio page with fixed image paths and GitHub projects section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
       >
       </i>
       <div class="sidebar_content">
-        <img class="sidebar_image" src="images/ppp.jpeg" alt="" />
+        <img
+          class="sidebar_image"
+          src="../images/ppp.jpeg"
+          alt="Pranisha Maharjan's profile photo"
+        />
         <h1 class="sidebar_name">Pranisha Maharjan</h1>
         <h3 class="sidebar__job">
           Engineering <span class="sidebar__country">Student</span>
@@ -61,6 +65,9 @@
           </li>
           <li class="sidebar_list_item">
             <a href="#skills">skills</a>
+          </li>
+          <li class="sidebar_list_item">
+            <a href="#github">github</a>
           </li>
           <li class="sidebar_list_item">
             <a href="#contact">contact</a>
@@ -282,6 +289,13 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section id="github" class="section">
+      <p class="section_title">GitHub Projects</p>
+      <p class="section_subtitle">My Repositories</p>
+      <div id="github-container" class="outer_box">
+        <p style="text-align: center; padding: 20px">Loading repositories...</p>
       </div>
     </section>
     <div id="contact" class="section">
