Fix sidebar image path

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="sidebar_content">
         <img
           class="sidebar_image"
-          src="../images/ppp.jpeg"
+          src="images/ppp.jpeg"
           alt="Pranisha Maharjan's profile photo"
         />
         <h1 class="sidebar_name">Pranisha Maharjan</h1>
